<resources>
    <string name="app_name">SOS-prototype</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="transitionname_picture">transitionnamepicture</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_inicio">inicioActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="contrasena">Password</string>
    <string name="usuario_correo">User or email</string>
    <string name="continuar">Continue</string>
    <string name="iniciar_sesion">Login</string>
    <string name="olvidaste_tu_contrasena">Forgot your password?</string>
    <string name="mas_opciones">More options</string>
    <string name="crear_una_cuenta">Create an account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="correo">Email</string>
    <string name="confirmar_contrase_a">Confirm password</string>
    <string name="nombres">Name</string>
    <string name="apellidos">Last name</string>
    <string name="registrarse">Check in</string>

    <string name="requerido">This field is required</string>
    <string name="cerrar_sesi_n">Sign off</string>
</resources>
