<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_sign_up"
    tools:context=".Presentacion.Activity.SignUpActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--<jp.s64.android.animatedtoolbar.AnimatedToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            >
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txNombres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombres"
                    android:tag="@string/nombres"
                    android:maxLength="40"
                    android:imeActionId="@+id/actionName"
                    android:imeActionLabel="@string/continuar"
                    android:inputType="textAutoComplete"
                    android:maxLines="1"

                    />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txApellidos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/apellidos"
                    android:tag="@string/apellidos"
                    android:maxLength="40"
                    android:imeActionId="@+id/actionLastName"
                    android:imeActionLabel="@string/continuar"
                    android:inputType="textAutoComplete"
                    android:maxLines="1"

                    />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txCorreo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/correo"
                    android:tag="@string/correo"
                    android:maxLength="100"
                    android:imeActionId="@+id/actionUsername"
                    android:imeActionLabel="@string/continuar"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"

                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txContraseña"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contrasena"
                    android:tag="@string/contrasena"
                    android:maxLength="100"
                    android:imeActionId="@+id/actionPassword"
                    android:imeActionLabel="@string/continuar"
                    android:inputType="textPassword"

                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txConfContraseña"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirmar_contrase_a"
                    android:tag="@string/confirmar_contrase_a"
                    android:maxLength="100"
                    android:imeActionId="@+id/actionConfPassword"
                    android:imeActionLabel="@string/registrarse"
                    android:inputType="textPassword"

                    />

            </android.support.design.widget.TextInputLayout>
            <android.support.v7.widget.AppCompatButton
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/registrarse"
                android:theme="@style/ButtonLarge"
                android:onClick="onRegister"
                />
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>